[FIX] Remove deprecation